# issue-tracker-agent

./: .env.example  .gitignore  CODEBASE_ANALYSIS.md  README.md  VECTOR_MEMORY_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  start.sh
app/: config.py  config_manager.py  utils.py
app/agent/: action_analysis.py  graph.py  issue_analysis.py  pr_review.py  preprocess.py
app/github/: client.py
app/jobs/: sync.py
app/notifiers/feishu/: client.py  renderer.py
app/storage/: memory_store.py  pg_store.py  sqlite_store.py
app/web/: server.py
app/web/static/: index.html
tools/: index_code.py
