[project]
name = "issue-tracker-agent"
version = "0.1.0"
description = "Issue tracker agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "python-dotenv",
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-core"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
